# 3d-city-edit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  main.cpp
.github/workflows/: build.yml  cpp-linter.yml
include/: CMakeLists.txt  Event.hpp
include/controller/: CameraController.hpp
include/core/: AssetManager.hpp  AsyncTaskQueue.hpp  CameraController.hpp  Config.hpp  Input.hpp  ModelLoader.hpp  Project.hpp  Scene.hpp  Serializer.hpp
include/renderer/: Camera.hpp  Mesh.hpp  Model.hpp  Picking.hpp  Shader.hpp  Texture.hpp
include/ui/: AssetBrowser.hpp  ObjectDetails.hpp  ObjectSelectionTree.hpp  Performance.hpp  SettingsPane.hpp  ShaderUniformPane.hpp  Viewport.hpp
src/: CMakeLists.txt  Editor.cpp  Editor.hpp  Event.cpp  Shader.cpp  Shader.hpp  main.cpp
src/controller/: CMakeLists.txt  CameraController.cpp
src/core/: AssetManager.cpp  AsyncTaskQueue.cpp  CMakeLists.txt  CameraController.cpp  Input.cpp  ModelLoader.cpp  Project.cpp  Scene.cpp  Serializer.cpp
src/renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Picking.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/ui/: AssetBrowser.cpp  CMakeLists.txt  ObjectDetails.cpp  ObjectSelectionTree.cpp  Performance.cpp  SettingsPane.cpp  ShaderUniformPane.cpp  Viewport.cpp
